src/objects/ffbf__BankFormatDefinitionField__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__BankFormatDefinitionRecordType__c</fullName>
        <label>Bank Format Definition Record Type</label>
        <referenceTo>ffbf__BankFormatDefinitionRecordType__c</referenceTo>
        <relationshipLabel>Bank Format Definition Fields</relationshipLabel>
        <relationshipName>BankFormatDefinitionFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbf__BlankFilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blank Filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__EndPosition__c</fullName>
        <label>End Position</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffbf__LeftJustified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Left Justified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__MustBeBlank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Must Be Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__NoDecimals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Decimals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__NumericOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Numeric Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__OutputSequence__c</fullName>
        <label>Output Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__RecordSize__c</fullName>
        <label>Record Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__RecordType__c</fullName>
        <label>Deprecated: Record Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__RecordValue__c</fullName>
        <label>Record Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__RemoveDashes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Dashes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__RightJustified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right Justified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__StartPosition__c</fullName>
        <label>Start Position</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__Unsigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbf__ZeroFilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zero Filled</label>
        <type>Checkbox</type>
    </fields>
    <label>Bank Format Definition Field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Format Definition Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>